[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/sarasa-ui.tres" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Fonts/sarasa-ui-sc-bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/UI-font-bold.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.686275, 0.196078, 0.196078, 1 )

[node name="Control" type="Control"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 700.0
color = Color( 0.141176, 0.576471, 0.188235, 1 )

[node name="BackButton" type="Button" parent="ColorRect"]
visible = false
margin_left = 5.0
margin_top = 5.0
margin_right = 105.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
text = "Back"

[node name="Menu" type="Control" parent="."]
margin_right = 640.0
margin_bottom = 700.0

[node name="StartGame" type="Button" parent="Menu"]
margin_left = 171.0
margin_top = 53.0
margin_right = 471.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 2 )
text = "开始游戏"

[node name="OptionMenu" type="Button" parent="Menu"]
visible = false
margin_left = 264.0
margin_top = 75.0
margin_right = 564.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 3 )
text = "选项"

[node name="Options" type="Panel" parent="."]
margin_left = 50.0
margin_top = 175.0
margin_right = 600.0
margin_bottom = 650.0
custom_styles/panel = SubResource( 4 )

[node name="Label" type="Label" parent="Options"]
margin_left = 53.0
margin_top = 107.0
margin_right = 162.0
margin_bottom = 150.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "棋盘大小"

[node name="BoadrSizeSlider" type="HSlider" parent="Options" groups=["board_size"]]
margin_left = 85.0
margin_top = 173.0
margin_right = 493.0
margin_bottom = 189.0
min_value = 4.0
max_value = 8.0
value = 5.0

[node name="BoardSizeLabel" type="Label" parent="Options"]
margin_left = 456.0
margin_top = 195.0
margin_right = 505.0
margin_bottom = 226.0
text = "5
"

[node name="Label2" type="Label" parent="Options"]
margin_left = 51.0
margin_top = 224.0
margin_right = 171.0
margin_bottom = 249.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "每方炸弹数量"

[node name="BombNumSlider" type="HSlider" parent="Options"]
margin_left = 87.0
margin_top = 268.0
margin_right = 496.0
margin_bottom = 299.0
min_value = 2.0
max_value = 5.0
value = 2.0

[node name="BombNumLabel" type="Label" parent="Options"]
margin_left = 456.0
margin_top = 311.0
margin_right = 504.0
margin_bottom = 340.0
text = "2"

[connection signal="pressed" from="ColorRect/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Menu/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="Menu/OptionMenu" to="." method="_on_OptionMenu_pressed"]
[connection signal="value_changed" from="Options/BoadrSizeSlider" to="." method="_on_BoadrSizeSlider_value_changed"]
[connection signal="value_changed" from="Options/BombNumSlider" to="." method="_on_BombNumSlider_value_changed"]
